<resources>
    <string name="app_name">LittleThings</string>
    <string name="FitnessPageTitle">This is the LittleThings Fitness Page</string>
    <string name="FitnessIntro">This page allows you to access fitness plans as well as creating your own by adding your favourite exercises to a personal routine</string>
    <string name="fitness_plans_button">Fitness Plans</string>
    <string name="create_your_own_button">Create Your own</string>
    <string name="Welcome">Welcome to the LittleThings App!</string>
    <string name="message_page">Message Page</string>
    <string name="add_chat">Add Chatroom</string>
    <string name="send">Send</string>
    <string name="title_activity_information">Information</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="please_select_the_part_of_your_life_you_would_like_to_improve">Please Select the part of your life you would like to improve</string>
    <string name="this_is_app_is_for_helping_people_who_are_living_with_mental_health_problems_it_will_user_the_areas_hightlighted_in_the_hse_s_the_little_things_campaign_to_do_so">This is app is for helping people who are living with mental health problems. It will user the areas hightlighted in the HSE\'s The little Things campaign to do so.</string>
    <string name="logout">Logout</string>
    <string name="Fitness_plan_title">Below is a list of different workouts for you to try.</string>
    <string name="arm_workout">Arm Workout</string>
    <string name="shoulder_workout">Shoulder Workout</string>
    <string name="back_workout">Back Workout</string>
    <string name="leg_workout">Leg Workout</string>
    <string name="cardio_workout">Cardio Workout</string>
    <string name="chest_workout">Chest Workout</string>

    <string-array name="titles">
        <item>Chest workout</item>
        <item>Arm workout</item>
        <item>Back workout</item>
        <item>Shoulder workout</item>
        <item>Leg workout</item>
        <item>Cardio workout</item>
    </string-array>

    <string-array name="description">
        <item>Chest workout</item>
        <item>Arm workout</item>
        <item>Back workout</item>
        <item>Shoulder workout</item>
        <item>Leg workout</item>
        <item>Cardio workout</item>
    </string-array>
</resources>
